// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login-form Renders \`login-form\` with custom props 1`] = `
<div
  class="layout column"
>
  <input
    autofocus="autofocus"
    class="v-text-field"
    clearable=""
    color="primary"
    error-messages=""
    label="Username"
    name="username"
    outlined=""
  />
  <c-password-field-stub
    clearable=""
    outlined=""
    required=""
    value="password"
  />
</div>
`;

exports[`login-form Renders \`login-form\` with default props 1`] = `
<div
  class="layout column"
>
  <input
    autofocus="autofocus"
    class="v-text-field"
    clearable=""
    color="primary"
    error-messages=""
    label="Username"
    name="username"
    outlined=""
  />
  <c-password-field-stub
    clearable=""
    outlined=""
    required=""
  />
</div>
`;
